--- a/app/src/main/res/layout/company_list.xml
+++ b/app/src/main/res/layout/company_list.xml
@@ -4,25 +4,50 @@
     <data>
         <variable
             name="data"
-            type="com.young.test2.home.data.CompanyList" />
+            type="com.young.test2.data.CompanyList" />
     </data>
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <RelativeLayout
         android:layout_marginBottom="8dp"
         android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/companyTitleTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true"
+
+            android:layout_marginHorizontal="24dp"
+            android:layout_marginTop="12dp"
+
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:text="@string/company_title"/>
+
+        <ImageView
+            android:id="@+id/companyListImageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:layout_alignParentEnd="true"
+
+            android:layout_marginHorizontal="12dp"
+
+            android:src="@drawable/ic_viewlist" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/companyRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             android:orientation="horizontal"
-            app:company_items="@{data.companyList}"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:layout_below="@id/companyListImageView"
+
+            app:company_items="@{data.companyList}"/>
+
+    </RelativeLayout>
 </layout>
