--- a/app/src/main/res/layout/expert_item.xml
+++ b/app/src/main/res/layout/expert_item.xml
@@ -3,20 +3,51 @@
     <data>
         <variable
             name="data"
-            type="com.young.test2.home.data.ExpertItem" />
+            type="com.young.test2.data.ExpertItem" />
     </data>
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:background="@color/white"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content">
-        <TextView
+        <ImageView
+            android:id="@+id/expertImageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{data.profileImagePath}"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="16dp"
+
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+
+            android:scaleType="centerCrop"
+            app:image_url="@{data.profileImagePath}"
+            app:radius="@{data.radius}"/>
+
+        <TextView
+            android:id="@+id/expertDoctorNameTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:layout_centerHorizontal="true"
+            android:layout_below="@id/expertImageView"
+
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            android:text="@{@string/expert_name(data.name, data.typeName)}"/>
+
+        <TextView
+            android:id="@+id/expertCompanyNameTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:layout_centerHorizontal="true"
+            android:layout_below="@id/expertDoctorNameTextView"
+
+            android:layout_marginVertical="10dp"
+
+            android:text="@{data.companyName}"/>
+
+    </RelativeLayout>
 </layout>
