--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -7,27 +7,27 @@
     <fragment
         android:id="@+id/navigation_home"
         android:name="com.young.test2.ui.fragments.home.HomeFragment"
-        android:label="NavigationHome"
+        android:label="@string/title_home"
         tools:layout="@layout/fragment_home" />
     <fragment
         android:id="@+id/navigation_expert"
         android:name="com.young.test2.ui.fragments.expert.ExpertFragment"
-        android:label="NavigationExpert"
+        android:label="@string/title_expert"
         tools:layout="@layout/fragment_expert"/>
     <fragment
         android:id="@+id/navigation_consult"
         android:name="com.young.test2.ui.fragments.consult.ConsultFragment"
-        android:label="NavigationConsult"
+        android:label="@string/title_consult"
         tools:layout="@layout/fragment_consult" />
     <fragment
         android:id="@+id/navigation_diagnosis"
         android:name="com.young.test2.ui.fragments.diagnosis.DiagnosisFragment"
-        android:label="NavigationDiagnosis"
+        android:label="@string/title_diagnosis"
         tools:layout="@layout/fragment_diagnosis" />
     <fragment
         android:id="@+id/navigation_profile"
         android:name="com.young.test2.ui.fragments.profile.ProfileFragment"
-        android:label="NavigationProfile"
+        android:label="@string/title_profile"
         tools:layout="@layout/fragment_profile" />
 
 
